# coding-agent-skills

./: README.md  SKILL.md  reference.md
examples/huggingface_x_kurrent_skills/: .gitignore  README.md  agentic_benchmark.py  docker-compose.yaml  populate_process_events.py  requirements.txt  train_local.py
examples/huggingface_x_kurrent_skills/src/: __init__.py  kurrentdb_client.py  process_generator.py
kurrent_skills/: .gitignore  SKILL.md  reference.md
kurrent_skills/templates/: docker-compose.test.yaml
kurrent_skills/templates/dotnet/: PersistentSubscriptionExample.cs  Program.cs  Projection.cs
kurrent_skills/templates/fsharp/: KurrentDbExample.fsproj  PersistentSubscriptionExample.fs  Program.fs  Projection.fs
kurrent_skills/templates/golang/: Dockerfile  go.mod  main.go  persistent_subscription.go  projection.go
kurrent_skills/templates/java/: pom.xml
kurrent_skills/templates/nodejs/: example.js  package-lock.json  (+2 more)
templates/: docker-compose.test.yaml  docker-compose.yaml
templates/dotnet/: Dockerfile  KurrentDbExample.csproj  PersistentSubscriptionExample.cs  Program.cs
templates/fsharp/: Dockerfile  KurrentDbExample.fsproj  PersistentSubscriptionExample.fs  Program.fs
templates/golang/: Dockerfile  go.mod  main.go  persistent_subscription.go
templates/java/: Dockerfile  pom.xml
templates/nodejs/: Dockerfile  example.js  package.json  persistent_subscription_example.js
templates/python/: example.py  persistent_subscription_example.py
templates/rust/: Cargo.toml  Dockerfile
templates/rust/src/: main.rs  persistent_subscription.rs
(+15 files in other folders)
