[package]
name = "kurrentdb-example"
version = "0.1.0"
edition = "2021"

[dependencies]
kurrentdb = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

[[bin]]
name = "example"
path = "src/main.rs"

[[bin]]
name = "persistent_subscription"
path = "src/persistent_subscription.rs"
